Combined some course content templates + Fall 2022 schedules

--- a/igm_mycourses_templates/CourseElements_and_Grading.html
+++ b/igm_mycourses_templates/CourseElements_and_Grading.html
@@ -16,124 +16,110 @@
 </head>
 
 <body>
-    <div class="jumbotron">
-        <strong>TEMPLATE</strong>
-        <p>This page was created from a template. Update with the correct content for your course and remove this header before sharing with students!</p>
-    </div>
-
-
-    <h2>Course Elements</h2>
-    <p><strong>Unless otherwise stated, ALL work in this course will be individual efforts only!</strong></p>
-    <p>Your final course grade will be determined based on the following course element weights and letter grade thresholds.</p>
-
-    <div class="two-col-panels" style="width: 50%;">
-        <div class="row">
-            <div class="col-sm card bg-light">
-                <div class="card-body">
-                    <div class="table-responsive" style="padding: 0px; margin: 0px;">
-                        <table class="table table-bordered" style="width: 100%; padding: 0px; margin: 0px;">
-                            <tbody>
-                                <tr>
-                                    <td style=" padding: 2px; margin: 0px;">Exams</td>
-                                    <td style=" padding: 2px; margin: 0px;">xx%</td>
-                                </tr>
-                                <tr>
-                                    <td style=" padding: 2px; margin: 0px;">Homeworks</td>
-                                    <td style=" padding: 2px; margin: 0px;">xx%</td>
-                                </tr>
-                                <tr>
-                                    <td style=" padding: 2px; margin: 0px;">Quizzes</td>
-                                    <td style=" padding: 2px; margin: 0px;">xx%</td>
-                                </tr>
-                                <tr>
-                                    <td style=" padding: 2px; margin: 0px;">Practice Exercises</td>
-                                    <td style=" padding: 2px; margin: 0px;">xx%</td>
-                                </tr>
-                                <tr>
-                                    <td style=" padding: 2px; margin: 0px;">Project</td>
-                                    <td style=" padding: 2px; margin: 0px;">xx%</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm card bg-light">
-                <div class="card-body">
-                    <div class="table-responsive" style="padding: 0px; margin: 0px;">
-                        <table class="table table-bordered" style="width: 100%; padding: 0px; margin: 0px;">
-                            <tbody>
-                                <tr>
-                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">A</td>
-                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 93.0</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">A-</td>
-                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 90.0 &amp; &lt; 93.0</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">B+</td>
-                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 87.0 &amp; &lt; 90.0</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">B</td>
-                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 83.0 &amp; &lt; 87.0</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">B-</td>
-                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 80.0 &amp; &lt; 83.0</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">C+</td>
-                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 77.0 &amp; &lt; 80.0</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">C</td>
-                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 73.0 &amp; &lt; 77.0</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">C-</td>
-                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 70.0 &amp; &lt; 73.0</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">D</td>
-                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 60.0 &amp; &lt; 70.0</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">F</td>
-                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&lt; 60.0</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <h3>XXX (xx%)</h3>
-    <p>SUMMARY</p>
-    <ul>
-        <li><strong>Grading:</strong> ...</li>
-        <li><strong>Submission:</strong> ...</li>
-        <li><strong>Due Dates &amp; Late Policy:</strong> ...
-        </li>
-    </ul>
-
-
-    <h2>Assignment Feedback and Final Grades</h2>
-    <p>It takes time to grade assignments and provide useful feedback &ndash; much more time than students may expect. Large assignments may take up to 3 weeks to be fully graded.</p>
-
-    <h3>Late Policy</h3>
-    <p>Except in documented extenuating circumstances, exceptions to assignment late policies will not be made for any reason. This is a college class and you are expected to manage your time wisely. If you are having problems with an assignment or have an emergency that may make you late in submitting your work, contact me as soon as possible (ideally BEFORE the due date).</p>
-
-    <h3>Challenging Grades</h3>
-    <p>If you challenge a grade, it must be done in a timely manner, within a week of the return of an assignment. Remember that in challenging a grade, the instructor reserves the right to revisit the grading on the entire assignment and may adjust the grade appropriately. This is mentioned not to discourage a student with a legitimate complaint over a grade, but to rather address the often-blatant problem of &ldquo;point weaseling&rdquo; on assignments.</p>
-    <p>At the end of the semester, any questions about the final grading of the course should be raised immediately. Department policy states that a student has one semester to challenge any grade.</p>
-
-    <h3>Incomplete Policy</h3>
-    <p>Incomplete (&ldquo;I&rdquo;) grades are reserved for cases in which the student is making credible course progress, and then something occurs in the student&rsquo;s life that prevents the completion of the course. Incomplete grades are not a mechanism to delay a failing grade nor are they a means to stave off probation or a suspension. For an instructor to grant an incomplete, credible documentation must be provided at the instructor&rsquo;s or school&rsquo;s request.</p>
-
-
-
+<div class="jumbotron"><strong>TEMPLATE</strong>
+<p>This page was created from a template. Update with the correct content for your course and remove this header before sharing with students!</p>
+</div>
+<h2>Course Elements</h2>
+<p><strong>Unless otherwise stated, ALL work in this course will be individual efforts only!</strong></p>
+<p>Your final course grade will be determined based on the following course element weights and letter grade thresholds.</p>
+<div class="two-col-panels" style="width: 50%;">
+<div class="row">
+<div class="col-sm card bg-light">
+<div class="card-body">
+<div class="table-responsive" style="padding: 0px; margin: 0px;">
+<table class="table table-bordered" style="width: 100%; padding: 0px; margin: 0px;">
+<tbody>
+<tr>
+<td style="padding: 2px; margin: 0px;">Exams</td>
+<td style="padding: 2px; margin: 0px;">xx%</td>
+</tr>
+<tr>
+<td style="padding: 2px; margin: 0px;">Homeworks</td>
+<td style="padding: 2px; margin: 0px;">xx%</td>
+</tr>
+<tr>
+<td style="padding: 2px; margin: 0px;">Quizzes</td>
+<td style="padding: 2px; margin: 0px;">xx%</td>
+</tr>
+<tr>
+<td style="padding: 2px; margin: 0px;">Practice Exercises</td>
+<td style="padding: 2px; margin: 0px;">xx%</td>
+</tr>
+<tr>
+<td style="padding: 2px; margin: 0px;">Project</td>
+<td style="padding: 2px; margin: 0px;">xx%</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+</div>
+<div class="col-sm card bg-light">
+<div class="card-body">
+<div class="table-responsive" style="padding: 0px; margin: 0px;">
+<table class="table table-bordered" style="width: 100%; padding: 0px; margin: 0px;">
+<tbody>
+<tr>
+<td style="width: 24.9123%; padding: 2px; margin: 0px;">A</td>
+<td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 93.0</td>
+</tr>
+<tr>
+<td style="width: 24.9123%; padding: 2px; margin: 0px;">A-</td>
+<td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 90.0 &amp; &lt; 93.0</td>
+</tr>
+<tr>
+<td style="width: 24.9123%; padding: 2px; margin: 0px;">B+</td>
+<td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 87.0 &amp; &lt; 90.0</td>
+</tr>
+<tr>
+<td style="width: 24.9123%; padding: 2px; margin: 0px;">B</td>
+<td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 83.0 &amp; &lt; 87.0</td>
+</tr>
+<tr>
+<td style="width: 24.9123%; padding: 2px; margin: 0px;">B-</td>
+<td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 80.0 &amp; &lt; 83.0</td>
+</tr>
+<tr>
+<td style="width: 24.9123%; padding: 2px; margin: 0px;">C+</td>
+<td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 77.0 &amp; &lt; 80.0</td>
+</tr>
+<tr>
+<td style="width: 24.9123%; padding: 2px; margin: 0px;">C</td>
+<td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 73.0 &amp; &lt; 77.0</td>
+</tr>
+<tr>
+<td style="width: 24.9123%; padding: 2px; margin: 0px;">C-</td>
+<td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 70.0 &amp; &lt; 73.0</td>
+</tr>
+<tr>
+<td style="width: 24.9123%; padding: 2px; margin: 0px;">D</td>
+<td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 60.0 &amp; &lt; 70.0</td>
+</tr>
+<tr>
+<td style="width: 24.9123%; padding: 2px; margin: 0px;">F</td>
+<td style="width: 75.0877%; padding: 2px; margin: 0px;">&lt; 60.0</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+</div>
+</div>
+</div>
+<h3>XXX (xx%)</h3>
+<p>SUMMARY</p>
+<ul>
+<li><strong>Grading:</strong> ...</li>
+<li><strong>Submission:</strong> ...</li>
+<li><strong>Due Dates &amp; Late Policy:</strong> ...</li>
+</ul>
+<h2>Assignment Feedback and Final Grades</h2>
+<p>It takes time to grade assignments and provide useful feedback – much more time than students may expect. Large assignments may take up to 3 weeks to be fully graded.</p>
+<h3>Late Policy</h3>
+<p>Except in documented extenuating circumstances, exceptions to assignment late policies will not be made for any reason. This is a college class and you are expected to manage your time wisely. If you are having problems with an assignment or have an emergency that may make you late in submitting your work, contact me as soon as possible (ideally BEFORE the due date).</p>
+<h3>Challenging Grades</h3>
+<p>If you challenge a grade, it must be done in a timely manner, within a week of the return of an assignment. Remember that in challenging a grade, the instructor reserves the right to revisit the grading on the entire assignment and may adjust the grade appropriately. This is mentioned not to discourage a student with a legitimate complaint over a grade, but to rather address the often-blatant problem of “point weaseling” on assignments.</p>
+<p>At the end of the semester, any questions about the final grading of the course should be raised immediately. Department policy states that a student has one semester to challenge any grade.</p>
+<h3>Incomplete Policy</h3>
+<p>Incomplete (“I”) grades are reserved for cases in which the student is making credible course progress, and then something occurs in the student’s life that prevents the completion of the course. Incomplete grades are not a mechanism to delay a failing grade nor are they a means to stave off probation or a suspension. For an instructor to grant an incomplete, credible documentation must be provided at the instructor’s or school’s request.</p>
 </body></html>
