--- a/igm_mycourses_templates/tr_schedule_sprints_with_milestones.html
+++ b/igm_mycourses_templates/tr_schedule_sprints_with_milestones.html
@@ -20,6 +20,7 @@
         <strong>TEMPLATE</strong>
         <p>This page was created from a template. Update with the correct content for your course and remove this header before sharing with students!<br>If you want to use Erika's template to help plan/generate your schedule, you can make a copy of <a href="https://docs.google.com/spreadsheets/d/1i9hGP7PDt-gREZCUe847Ll77RafgpDgXGbDmItS5WcY/edit?usp=sharing">this doc Google Sheets</a>. Be warned that it's pretty hacky.</p>
     </div>
+
     <details open>
         <summary>Important Dates, Fall 2022 (2221)</summary>
         <div class="content">
@@ -40,223 +41,126 @@
 
     <p class="intro">A full, week by week course schedule of topics and due dates is below. This is subject to change!</p>
 
-<details><summary>Sprint 0: Course Kickoff & Team Formation</summary>
+<h2>Course Kickoff & Team Formation</h2><details><summary>Sprint 0</summary>
         <div class="content">
             <table style="width:100%">
                 <colgroup>
                     <col span="1" style="width: 10%;">
                     <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 27%;">
+                    <col span="1" style="width: 40%;">
+                    <col span="1" style="width: 40%;">
                 </colgroup>
                 <thead>
                     <tr>
                         <th>Week</th>
                         <th>Date</th>
-                        <th>Topic</th>
-                        <th>References</th>
+                        <th>In-Class</th>
                         <th>Assignments Due</th>
                     </tr>
                 </thead>
-                <tbody><tr><td rowspan="2"><h4>1</h4></td><td><p>Tue 8/23</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 8/25</p></td>
-<td><p>8/29: Last day of Add/Drop period</p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td rowspan="2"><h4>2</h4></td><td><p>Tue 8/30</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 9/1</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr></tbody></table></div></details><details><summary>Sprint 1: ???</summary>
+                <tbody><tr><td rowspan="2"><h4>1</h4></td><td><p>Tue 8/23</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 8/25</p></td><td><p>8/29: Last day of Add/Drop period</p></td><td><p></p></td></tr><tr><td rowspan="2"><h4>2</h4></td><td><p>Tue 8/30</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 9/1</p></td><td><p></p></td><td><p></p></td></tr></tbody></table></div></details><h2>Milestone 1</h2><details><summary>Sprint 1</summary>
         <div class="content">
             <table style="width:100%">
                 <colgroup>
                     <col span="1" style="width: 10%;">
                     <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 27%;">
+                    <col span="1" style="width: 40%;">
+                    <col span="1" style="width: 40%;">
                 </colgroup>
                 <thead>
                     <tr>
                         <th>Week</th>
                         <th>Date</th>
-                        <th>Topic</th>
-                        <th>References</th>
+                        <th>In-Class</th>
                         <th>Assignments Due</th>
                     </tr>
                 </thead>
-                <tbody><tr><td rowspan="2"><h4>3</h4></td><td><p>Tue 9/6</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 9/8</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td rowspan="2"><h4>4</h4></td><td><p>Tue 9/13</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 9/15</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td rowspan="2"><h4>5</h4></td><td><p>Tue 9/20</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 9/22</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr></tbody></table></div></details><details><summary>Sprint 2: ???</summary>
+                <tbody><tr><td rowspan="2"><h4>3</h4></td><td><p>Tue 9/6</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 9/8</p></td><td><p></p></td><td><p></p></td></tr><tr><td rowspan="2"><h4>4</h4></td><td><p>Tue 9/13</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 9/15</p></td><td><p></p></td><td><p></p></td></tr></tbody></table></div></details><details><summary>Sprint 2</summary>
         <div class="content">
             <table style="width:100%">
                 <colgroup>
                     <col span="1" style="width: 10%;">
                     <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 27%;">
+                    <col span="1" style="width: 40%;">
+                    <col span="1" style="width: 40%;">
                 </colgroup>
                 <thead>
                     <tr>
                         <th>Week</th>
                         <th>Date</th>
-                        <th>Topic</th>
-                        <th>References</th>
+                        <th>In-Class</th>
                         <th>Assignments Due</th>
                     </tr>
                 </thead>
-                <tbody><tr><td rowspan="2"><h4>6</h4></td><td><p>Tue 9/27</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 9/29</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td rowspan="2"><h4>7</h4></td><td><p>Tue 10/4</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 10/6</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td rowspan="2"><h4>8</h4></td><td><p>Tue 10/11</p></td>
-<td><p>Fall Break - No Classes</p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 10/13</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr></tbody></table></div></details><details><summary>Sprint 3: ???</summary>
+                <tbody><tr><td rowspan="2"><h4>5</h4></td><td><p>Tue 9/20</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 9/22</p></td><td><p></p></td><td><p></p></td></tr><tr><td rowspan="2"><h4>6</h4></td><td><p>Tue 9/27</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 9/29</p></td><td><p></p></td><td><p></p></td></tr></tbody></table></div></details><h2>Milestone 2</h2><details><summary>Sprint 3</summary>
         <div class="content">
             <table style="width:100%">
                 <colgroup>
                     <col span="1" style="width: 10%;">
                     <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 27%;">
+                    <col span="1" style="width: 40%;">
+                    <col span="1" style="width: 40%;">
                 </colgroup>
                 <thead>
                     <tr>
                         <th>Week</th>
                         <th>Date</th>
-                        <th>Topic</th>
-                        <th>References</th>
+                        <th>In-Class</th>
                         <th>Assignments Due</th>
                     </tr>
                 </thead>
-                <tbody><tr><td rowspan="2"><h4>9</h4></td><td><p>Tue 10/18</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 10/20</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td rowspan="2"><h4>10</h4></td><td><p>Tue 10/25</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 10/27</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td rowspan="2"><h4>11</h4></td><td><p>Tue 11/1</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 11/3</p></td>
-<td><p>11/4: Last day to drop from classes with a grade of "W"</p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr></tbody></table></div></details><details><summary>Sprint 4: ???</summary>
+                <tbody><tr><td rowspan="2"><h4>7</h4></td><td><p>Tue 10/4</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 10/6</p></td><td><p></p></td><td><p></p></td></tr><tr><td rowspan="2"><h4>8</h4></td><td><p>Tue 10/11</p></td><td><p>Fall Break - No Classes</p></td><td><p></p></td></tr><tr><td><p>Thu 10/13</p></td><td><p></p></td><td><p></p></td></tr></tbody></table></div></details><details><summary>Sprint 4</summary>
         <div class="content">
             <table style="width:100%">
                 <colgroup>
                     <col span="1" style="width: 10%;">
                     <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 27%;">
+                    <col span="1" style="width: 40%;">
+                    <col span="1" style="width: 40%;">
                 </colgroup>
                 <thead>
                     <tr>
                         <th>Week</th>
                         <th>Date</th>
-                        <th>Topic</th>
-                        <th>References</th>
+                        <th>In-Class</th>
                         <th>Assignments Due</th>
                     </tr>
                 </thead>
-                <tbody><tr><td rowspan="2"><h4>12</h4></td><td><p>Tue 11/8</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 11/10</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td rowspan="2"><h4>13</h4></td><td><p>Tue 11/15</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 11/17</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td rowspan="2"><h4>14</h4></td><td><p>Tue 11/22</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 11/24</p></td>
-<td><p>Thanksgiving Holiday - University Closed</p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td rowspan="2"><h4>15</h4></td><td><p>Tue 11/29</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr><tr><td><p>Thu 12/1</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-</tr></tbody></table></div></details>
-
+                <tbody><tr><td rowspan="2"><h4>9</h4></td><td><p>Tue 10/18</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 10/20</p></td><td><p></p></td><td><p></p></td></tr><tr><td rowspan="2"><h4>10</h4></td><td><p>Tue 10/25</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 10/27</p></td><td><p></p></td><td><p></p></td></tr></tbody></table></div></details><h2>Milestone 3</h2><details><summary>Sprint 5</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 40%;">
+                    <col span="1" style="width: 40%;">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>Week</th>
+                        <th>Date</th>
+                        <th>In-Class</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody><tr><td rowspan="2"><h4>11</h4></td><td><p>Tue 11/1</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 11/3</p></td><td><p>11/4: Last day to drop from classes with a grade of "W"</p></td><td><p></p></td></tr><tr><td rowspan="2"><h4>12</h4></td><td><p>Tue 11/8</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 11/10</p></td><td><p></p></td><td><p></p></td></tr></tbody></table></div></details><details><summary>Sprint 6</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 40%;">
+                    <col span="1" style="width: 40%;">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>Week</th>
+                        <th>Date</th>
+                        <th>In-Class</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody><tr><td rowspan="2"><h4>13</h4></td><td><p>Tue 11/15</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 11/17</p></td><td><p></p></td><td><p></p></td></tr><tr><td rowspan="2"><h4>14</h4></td><td><p>Tue 11/22</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 11/24</p></td><td><p>Thanksgiving Holiday - University Closed</p></td><td><p></p></td></tr><tr><td rowspan="2"><h4>15</h4></td><td><p>Tue 11/29</p></td><td><p></p></td><td><p></p></td></tr><tr><td><p>Thu 12/1</p></td><td><p></p></td><td><p></p></td></tr></tbody></table></div></details>
     <h3>Do NOT make travel plans for the finals period until ALL of your exam times have been set for ALL classes.</h3>
     <details open>
         <summary>Finals Week</summary>
@@ -288,4 +192,6 @@
         </div>
     </details>
 
-</body></html>
+</body>
+
+</html>
