--- a/igm_mycourses_templates/Syllabus.html
+++ b/igm_mycourses_templates/Syllabus.html
@@ -12,6 +12,7 @@
     <!-- Template CSS -->
 
     <link rel="stylesheet" href="custom.css">
+
     <title>Course Overview</title>
 </head>
 
@@ -20,10 +21,67 @@
 <p>This page was created from a template. Update with the correct content for your course and remove this header before sharing with students!</p>
 </div>
 <h1>IGME-##-##: COURSE TITLE</h1>
-    <h1>Syllabus</h1>
-<h2>Course Overview</h2>
+<h1>Syllabus</h1>
+<ul>
+<li><a href="#overview">Course Overview</a></li>
+<li><a href="#goals">Goals &amp; Outcomes</a></li>
+<li><a href="#format">Course Format</a>
+<ul>
+<li><a href="#texts">Text &amp; Materials</a></li>
+<li><a href="#grading">Grading Overview</a></li>
+<li><a href="#emergencies">Emergencies</a></li>
+</ul>
+</li>
+<li><a href="#communications">Communications Guidelines</a>
+<ul>
+<li><a href="#myCourses">myCourses</a></li>
+<li><a href="#slack">Slack</a></li>
+<li><a href="#private">Private Communications</a></li>
+<li><a href="#office">Office Hours</a></li>
+</ul>
+</li>
+<li><a href="#attendance">Attendance &amp; Participation</a></li>
+<li><a href="#adjustments">Academic Adjustments</a></li>
+<li><a href="#support">Student Support</a></li>
+<li><a href="#starfish">RIT's Academic Alert System</a></li>
+</ul>
+<h2 id="overview">Course Overview</h2>
 <p>SIS DESCRIPTION</p>
-<h2>Course Goals &amp; Outcomes</h2>
+<div class="table-responsive" style="padding: 0px; margin: 0px;">
+<table class="table table-bordered" style="width: 80%; padding: 0px; margin: 0px;">
+<tbody>
+<tr>
+<td style="width: 40%;">
+<h4 style="padding: 0px; margin: 0px;">Instructor</h4>
+<p><strong>NAME</strong>, pronouns<strong><br></strong>TITLE, IGM<br>email<br>GitHub - ghId</p>
+<p><strong></strong><strong></strong>Office Hours:<br>&nbsp;- ...<br>&nbsp;- ...</p>
+</td>
+<td style="width: 60%;">
+<h4 style="padding: 0px; margin: 0px;">Teaching Assistants</h4>
+<div class="table-responsive" style="padding: 0px; margin: 0px;">
+<table class="table" style="width: 100.074%; padding: 0px; margin: 0px;">
+<tbody>
+<tr>
+<td style="width: 100.097%;">
+<p><strong>NAME</strong>, pronouns<strong><br></strong>email<br>GitHub - ghId</p>
+<h5></h5>
+<p><strong>NAME</strong>, pronouns<strong><br></strong>email<br>GitHub - ghId</p>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+<p><em>This semester, I am teaching 2 sections of this course. To facilitate consistency, all sections have been "merged" into a single myCourses shell. Unless otherwise stated, all due dates, etc. will be the same for all of my sections. However, each section will meet at their assigned time. As such, <strong>please</strong> make sure you know in which section you are enrolled and when it meets.</em></p>
+<ul>
+<li><strong>Section XX: </strong> Days TIME, ROOM</li>
+<li><strong>Section XX: </strong> Days TIME, ROOM</li>
+</ul>
+<h2 id="#goals">Course Goals &amp; Outcomes</h2>
 <p>This course furthers the exploration of&nbsp;....</p>
 <p>By the end of this course, students will be able to:</p>
 <ul>
@@ -33,20 +91,20 @@
 <ul>
 <li>...</li>
 </ul>
-<h2>Course Format</h2>
+<h2 id="format">Course Format</h2>
 <p>All core content, assignments, submissions, etc. will be made available to you at the beginning of each week according to the Course Schedule. We will use the scheduled class time for lecture, open discussions, team meetings, and 1on1 meetings as needed. <strong>Your consistent participation in these activities and the team project is required!</strong></p>
 <p>Each topic in this course will be supported via the required textbook and/or supplemental readings and have associated individual and project activities. <strong>In addition to class time, you should plan to spend a minimum of 8 hours weekly</strong> reading the provided resources and working on the individual and team assignments.</p>
 <p><strong>Please be sure to keep current with the readings for the course!</strong> While you are not expected to memorize/understand every detail of the readings, it is important that you read the materials so that you can participate in discussions and in-class activities. As you work through each week's material, remember that you’re here to learn something new, or to get better at something you already have experience with. I’m here to help you do that. <strong>Please don’t be afraid to ask for help when you need it. </strong><em>(I do actually enjoy helping you!)</em><em></em></p>
-<p><strong>If class needs to be cancelled for any reason, students will be contacted via email, and an announcement will be posted in myCourses and Slack.</strong></p>
-<h3>Texts &amp; Materials</h3>
+<p><strong>If a class needs to be canceled for any reason, students will be contacted via email, and an announcement will be posted in myCourses and Slack.</strong></p>
+<h3 id="texts">Texts &amp; Materials</h3>
 <p>You will need regular, reliable access to all of the following:</p>
 <ul>
 <li>BOOK INFO</li>
 </ul>
 <p>I will also provide lecture slides, demo code, etc., but these are designed to supplement, NOT replace the required references.</p>
-<h3>Grading Overview</h3>
+<h3 id="grading">Grading Overview</h3>
 <p>Your final course grade will be determined based on the following course element weights and letter grade thresholds. For details about each course element and grading policies, see Course Elements &amp; Grading.</p>
-<div class="two-col-panels" style="width: 50%; margin-left: 25%">
+<div class="two-col-panels" style="width: 50%; margin-left: 25%;">
 <div class="row">
 <div class="col-sm card bg-light" style="min-width: 30%;">
 <div class="card-body">
@@ -131,27 +189,29 @@
 </div>
 </div>
 <p><em>If at any time, you are concerned about your performance or progress in this course, you should not hesitate to contact your instructor and discuss it.</em></p>
-<h2>Communications Guidelines</h2>
+<h3>Emergencies</h3>
+<p>In the event of a University-wide emergency, course requirements, classes, deadlines, and grading schemes are subject to changes that may include alternative delivery methods, alternative methods of interaction with the instructor, class materials, and/or classmates, a revised attendance policy, and a revised calendar and/or grading scheme.</p>
+<h2 id="communications">Communications Guidelines</h2>
 <div class="card card-standard">
 <div class="card-body">
 <p><em><strong>All official communications should be done using RIT accounts (email or Slack).<br>Faculty may not be able to respond to requests that do not originate from an RIT account.</strong></em></p>
 </div>
 </div>
-<h3>myCourses Announcements</h3>
-<p>I will provide any course announcements through the Announcements on the Course Home Page. This includes any updates or changes to assignments or other course assignments, as well as general comments about assignment results or discussions. Please check your RIT e-mail &amp; myCourses daily for important notifications.</p>
-<h3>Slack</h3>
-<p>Slack is a way to extend our time together and build community in a more casual way. People can have discussions or ask questions. Questions may be answered by myself, our TAs, or other students.&nbsp;</p>
+<h3 id="myCourses">myCourses</h3>
+<p>I will provide any course announcements through the Announcements on the Course Home Page. This includes any updates or changes to assignments or other course assignments, as well as general comments about assignment results or discussions. myCourses will also be used to provide grades and detailed assignment feedback, <strong>Please check your RIT e-mail &amp; myCourses daily for important notifications.</strong></p>
+<h3 id="slack">Slack</h3>
+<p><strong>Slack is a way to extend our time together, share supplemental resources, and build community in a more casual way.</strong> People can have discussions or ask questions. Questions may be answered by myself, our TAs, or other students.&nbsp;</p>
 <p class="tab"><em>Slack is NOT a replacement for attending class, studying, doing assignments, etc!</em></p>
 <p>If you have general questions about the course or an assignment, please post your questions to a public channel in Slack so all students can benefit from the answer. If, as a student, you can answer a question posed, I encourage you to reply to your classmate.</p>
-<h3>Private Communications</h3>
+<h3 id="private">Private Communications</h3>
 <p><strong>If you have a question about your particular assignment, grade, etc, please contact me privately.</strong></p>
 <h4>Slack DMs</h4>
 <p>I check email often, but Slack DMs are usually the fastest way to reach me. If you do not receive a response from me within 24 hours, Monday-Friday, contact me again as it is likely I missed your first message. Messages over the weekend may take slightly longer for a response. Unless a topic is sensitive, I strongly encourage you to copy the TAs on any messages to me by <a href="https://slack.com/help/articles/1500002969782-Add-more-people-to-a-group-direct-message">creating a group DM</a>. The TAs can answer most questions and, regardless, I like them to be "in the loop" as much as possible.</p>
 <h4>Email</h4>
 <p>Always include a subject line and be sure to mention the class name and section. It’s also expected that you use complete sentences and punctuation, as well as sign your name.</p>
-<h4>Office Hours</h4>
+<h3 id="office">Office Hours</h3>
 <p>Office hours offer you the opportunity to ask individual questions about the course material that you may have not had time to ask in class. Office hours are held on a first-come-first-served drop-in basis with no appointment necessary. Sometimes office hours become increasingly busy the closer it is to a deadline or the end of the semester. If students are waiting, discussions will be limited to ~10 minutes/student. Plan your use of office hours accordingly.&nbsp;</p>
-<h2>Attendance &amp; Participation</h2>
+<h2 id="attendance">Attendance &amp; Participation</h2>
 <p>Due to time constraints, it is important that you join class each day prepared to work. There will be times when we will discuss topics and issues in the form of a lecture. During this time in the class, you will be expected to take notes about the material being presented. I highly recommend taking hand-written notes during class. During the lecture time, you are also encouraged to ask questions about the topics being discussed or the supplemental readings you have completed.</p>
 <h3>Course Absence Requests</h3>
 <p>In the case of an illness or unexpected absence, the student should try to communicate with the faculty in as timely of a manner as possible. When class is missed, it is up to the student to make up work and to acquire any course materials. Absences in any form do not postpone due dates unless agreed upon by the instructor.</p>
@@ -165,29 +225,14 @@
 <li><a href="https://www.rit.edu/provost/sites/rit.edu.provost/files/communications/RIT_Academic_Continuity_for_COVID_Related_Disruptions_and_DSO_Accomodations_v6-1.pdf">Academic Continuity for COVID-related Disruptions in Learning and Disability Services Office (DSO) Accommodations</a></li>
 <li><a href="https://www.rit.edu/provost/sites/rit.edu.provost/files/communications/RIT_Remote_Access_Request_Form_v3.pdf">Student Remote Participation Form</a></li>
 </ul>
-<h2>Academic Adjustments</h2>
-<p>RIT is committed to providing academic adjustments to students with disabilities. If you would like to request academic adjustments such as testing modifications due to a disability, please contact the Disability Services Office. Contact information for the DSO and information about how to request adjustments can be found at <a href="/content/enforced2/958569-IGME10602.2215/igm_mycourses_templates/www.rit.edu/dso">www.rit.edu/dso</a>.</p>
+<h2 id="adjustments">Academic Adjustments</h2>
+<p>RIT is committed to providing academic adjustments to students with disabilities. If you would like to request academic adjustments such as testing modifications due to a disability, please contact the Disability Services Office. Contact information for the DSO and information about how to request adjustments can be found at <a href="http://www.rit.edu/dso">www.rit.edu/dso</a>.</p>
 <p><strong>After you receive academic adjustment approval, it is imperative that you contact me as early as possible so that we can work out whatever arrangement is necessary.</strong></p>
-<h2>Health/Safety in the Classroom</h2>
-<p>See the <a href="https://www.rit.edu/ready/rit-safety-plan" target="_blank" rel="noopener">RIT Safety Plan</a> and <a href="https://www.rit.edu/ready/community-expectations">Community Expectations</a> for details about health/safety policies that apply university-wide.</p>
-<h3>Food and Drink</h3>
-<p>Food and drink are not permitted in the computer labs.&nbsp; Food and drink have already been prohibited for years before covid due to the nature of spilling liquids on expensive lab computers (yes, it has happened!) or using greasy fingers on keyboards (eww).&nbsp;&nbsp;&nbsp;</p>
-<p><strong>The ONLY exception is: a beverage in a closed, <em>spill-proof</em> container with a straw or spout</strong>.&nbsp; A strong, structured bottle that contains the beverage and a sturdy straw will work.&nbsp; If you are a hot beverage drinker, keep an insulated tumbler with you.&nbsp; No, a paper cup with a plastic straw from Salsarita's or Midnight Oil does not count. &nbsp;</p>
-<p>Need some suggestions on acceptable cup types?&nbsp; Check these out:</p>
-<ul>
-<li>Silicone straw:&nbsp;<a href="https://tinyurl.com/2usu9nz6">https://tinyurl.com/2usu9nz6</a></li>
-<li>Stainless steel:&nbsp;<a href="https://tinyurl.com/24u7tn5h">https://tinyurl.com/24u7tn5h</a></li>
-<li>Simple and insulated: <a href="https://tinyurl.com/2p95dyb9">https://tinyurl.com/2p95dyb9</a></li>
-<li>Fan of glass?&nbsp;<a href="https://tinyurl.com/mt5n9shx">https://tinyurl.com/mt5n9shx</a></li>
-<li>Small with fun prints: <a href="https://tinyurl.com/2p9c9yf3">https://tinyurl.com/2p9c9yf3</a></li>
-</ul>
-<h3>Emergencies</h3>
-<p>In the event of a University-wide emergency, course requirements, classes, deadlines, and grading schemes are subject to changes that may include alternative delivery methods, alternative methods of interaction with the instructor, class materials, and/or classmates, a revised attendance policy, and a revised calendar and/or grading scheme.</p>
-<h2>Student Support</h2>
+<h2 id="support">Student Support</h2>
 <p><strong>You’re here to learn something new, or to get better at something you already have experience with. We're here to help you do that.</strong></p>
 <p><strong>Success in this course depends heavily on your personal health and wellbeing.</strong> The academic demands in this course and your other classes can be understandably difficult. It is normal to feel anxious about your academic ability, especially when unexpected life events emerge.</p>
 <p>Your other instructors and I strongly encourage you to reframe challenges as an unavoidable pathway to success. Reflect on your role in taking care of yourself throughout the term, before the demands of exams and projects reach their peak. <strong>Please feel free to reach out to me about any difficulty you may be having that may impact your performance in this course as soon as it occurs and before it becomes unmanageable.</strong></p>
-<h3>Available Resources</h3>
+<h3 id="resources">Available Resources</h3>
 <p>In addition to your academic advisor, I strongly encourage you to contact the many other support services on campus that stand ready to assist you.</p>
 <p>If you feel you are in need of counseling services, you can call <a href="https://www.rit.edu/studentaffairs/counseling/get-support/need-help-now" title="Counseling &amp; Psychological Services (CaPS)">Counseling &amp; Psychological Services (CaPS)</a> at 475-2261 during business hours (M-Th, 8 to 5) or go directly to CaPS on the second floor of the August Center (AUG). Additional contact information is available at the link.</p>
 <p><a href="https://www.rit.edu/studentaffairs/tigerscare/" title="Tigers Care">Tigers Care</a> is a campus-wide effort to enhance, promote, and sustain a culture of caring and support at RIT.&nbsp;</p>
@@ -202,6 +247,6 @@
 <li><a href="https://www.rit.edu/studentaffairs/qcenter/index.html">Q Center</a></li>
 </ul>
 <p>For a detailed list of available resources, please see <a href="https://www.rit.edu/academicaffairs/advising/student-resources">https://www.rit.edu/academicaffairs/advising/student-resources</a>.</p>
-<h3>RIT's Academic Alert System</h3>
-<p>This course participates in the RIT Starfish academic alert system, which is designed to promote student success through communication between students, instructors, and advisors. When I am concerned about a student’s academic performance, I may raise an academic alert to notify the student as well as their advisor(s). &nbsp;If you receive an academic alert email, it is your responsibility to contact me as soon as possible to discuss the issue, its potential impact on your success in this course, and identify resources to help move you forward. For more information about the Starfish system, visit <a href="/content/enforced2/835693-IGMFacultyTeachingResources2020/www.rit.edu/starfish">www.rit.edu/starfish</a>.</p>
+<h3 id="starfish">RIT's Academic Alert System</h3>
+<p>This course participates in the RIT Starfish academic alert system, which is designed to promote student success through communication between students, instructors, and advisors. When I am concerned about a student’s academic performance, I may raise an academic alert to notify the student as well as their advisor(s). &nbsp;If you receive an academic alert email, it is your responsibility to contact me as soon as possible to discuss the issue, its potential impact on your success in this course, and identify resources to help move you forward. For more information about the Starfish system, visit <a href="https://wiki.rit.edu/display/earlyalert/Home">www.rit.edu/starfish</a>.</p>
 </body></html>
