--- a/igm_mycourses_templates/tr_schedule_weeks.html
+++ b/igm_mycourses_templates/tr_schedule_weeks.html
@@ -16,29 +16,26 @@
 </head>
 
 <body>
-    <div class="jumbotron">
-        <strong>TEMPLATE</strong>
-        <p>This page was created from a template. Update with the correct content for your course and remove this header before sharing with students!</p>
+    <div class="jumbotron"><strong>TEMPLATE</strong>
+        <p>This page was created from a template. Update with the correct content for your course and remove this header before sharing with students!<br>If you want to use Erika's template to help plan/generate your schedule, you can make a copy of <a href="https://docs.google.com/spreadsheets/d/1lE_b1YIo7wy4mehROZxt2UQ8E4KR4GYDfGQ8kzybHUM/edit?usp=sharing">this Google Sheets doc</a>. Be warned that it's pretty hacky.</p>
     </div>
-
-    <details open>
-        <summary>Important Dates, Spring 2022 (2215)</summary>
+    <details open="">
+        <summary>Important Dates, Spring 2023 (2225)</summary>
         <div class="content">
             <ul>
-                <li>1/17: Martin Luther King Jr. Day (No classes</li>
-                <li>1/18: Last day of Add/Drop period</li>
-                <li>3/6-13: Spring Break - No Classes</li>
-                <li>4/1: Last day to drop from classes with a grade of "W"</li>
-                <li>4/25: Last day, evening, and online classes</li>
-                <li>4/26: Reading Day</li>
-                <li>4/27-5/4: Final exams</li>
-                <li>5/6: Final grades due</li>
+                <li>1/16: MLK Jr. Day (no classes)</li>
+                <li>1/17: First day of classes</li>
+                <li>1/24: Last day of Add/Drop period</li>
+                <li>3/12-19: Spring Break (no classes)</li>
+                <li>4/7: Last day to drop from classes with a "W"</li>
+                <li>5/1: Last day, evening, and online classes</li>
+                <li>5/2: Reading Day</li>
+                <li>5/3-10: Final exams</li>
+                <li>5/12: Final grades due</li>
             </ul>
-
         </div>
     </details>
-
-    <p class="intro">A full, week by week course schedule of topics and due dates is below. This is subject to change!
+    <p class="intro">A full, week-by-week course schedule of topics and due dates is below. This is subject to change!</p>
 
     <details>
         <summary>Week 1: ???</summary>
@@ -61,7 +58,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 1/11</p>
+                            <p>Tue 1/17</p>
                         </td>
                         <td>
                             <p></p>
@@ -75,7 +72,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 1/13</p>
+                            <p>Thu 1/19</p>
                         </td>
                         <td>
                             <p></p>
@@ -112,10 +109,10 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 1/18</p>
+                            <p>Tue 1/24</p>
                         </td>
                         <td>
-                            <p>MLK Jr. Day, No classes!</p>
+                            <p>Last day of Add/Drop period</p>
                         </td>
                         <td>
                             <p></p>
@@ -126,7 +123,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 1/20</p>
+                            <p>Thu 1/26</p>
                         </td>
                         <td>
                             <p></p>
@@ -163,7 +160,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 1/25</p>
+                            <p>Tue 1/31</p>
                         </td>
                         <td>
                             <p></p>
@@ -177,7 +174,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 1/27</p>
+                            <p>Thu 2/2</p>
                         </td>
                         <td>
                             <p></p>
@@ -214,7 +211,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 2/1</p>
+                            <p>Tue 2/7</p>
                         </td>
                         <td>
                             <p></p>
@@ -228,7 +225,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 2/3</p>
+                            <p>Thu 2/9</p>
                         </td>
                         <td>
                             <p></p>
@@ -265,7 +262,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 2/8</p>
+                            <p>Tue 2/14</p>
                         </td>
                         <td>
                             <p></p>
@@ -279,7 +276,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 2/10</p>
+                            <p>Thu 2/16</p>
                         </td>
                         <td>
                             <p></p>
@@ -316,7 +313,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 2/15</p>
+                            <p>Tue 2/21</p>
                         </td>
                         <td>
                             <p></p>
@@ -330,7 +327,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 2/17</p>
+                            <p>Thu 2/23</p>
                         </td>
                         <td>
                             <p></p>
@@ -367,7 +364,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 2/22</p>
+                            <p>Tue 2/28</p>
                         </td>
                         <td>
                             <p></p>
@@ -381,7 +378,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 2/24</p>
+                            <p>Thu 3/2</p>
                         </td>
                         <td>
                             <p></p>
@@ -418,7 +415,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 3/1</p>
+                            <p>Tue 3/7</p>
                         </td>
                         <td>
                             <p></p>
@@ -432,7 +429,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 3/3</p>
+                            <p>Thu 3/9</p>
                         </td>
                         <td>
                             <p></p>
@@ -449,7 +446,7 @@
         </div>
     </details>
     <details>
-        <summary>Spring Break!</summary>
+        <summary>Week Spring Break: Spring Break</summary>
         <div class="content">
             <table style="width:100%">
                 <colgroup>
@@ -469,10 +466,10 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 3/8</p>
+                            <p>Tue 3/14</p>
                         </td>
                         <td>
-                            <p>No classes!</p>
+                            <p>Spring Break</p>
                         </td>
                         <td>
                             <p></p>
@@ -483,10 +480,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 3/10</p>
+                            <p>Thu 3/16</p>
                         </td>
                         <td>
-                            <p>No classes!</p>
+                            <p>Spring Break</p>
                         </td>
                         <td>
                             <p></p>
@@ -520,7 +517,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 3/15</p>
+                            <p>Tue 3/21</p>
                         </td>
                         <td>
                             <p></p>
@@ -534,7 +531,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 3/17</p>
+                            <p>Thu 3/23</p>
                         </td>
                         <td>
                             <p></p>
@@ -571,7 +568,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 3/22</p>
+                            <p>Tue 3/28</p>
                         </td>
                         <td>
                             <p></p>
@@ -585,10 +582,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 3/24</p>
+                            <p>Thu 3/30</p>
                         </td>
                         <td>
-                            <p></p>
+                            <p>11/4: Last day to drop from classes with a grade of "W"</p>
                         </td>
                         <td>
                             <p></p>
@@ -622,7 +619,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 3/29</p>
+                            <p>Tue 4/4</p>
                         </td>
                         <td>
                             <p></p>
@@ -636,10 +633,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 3/31</p>
+                            <p>Thu 4/6</p>
                         </td>
                         <td>
-                            <p></p>
+                            <p>Last day to drop from classes with a grade of "W" (4/7)</p>
                         </td>
                         <td>
                             <p></p>
@@ -673,7 +670,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 4/5</p>
+                            <p>Tue 4/11</p>
                         </td>
                         <td>
                             <p></p>
@@ -687,7 +684,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 4/7</p>
+                            <p>Thu 4/13</p>
                         </td>
                         <td>
                             <p></p>
@@ -724,7 +721,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 4/12</p>
+                            <p>Tue 4/18</p>
                         </td>
                         <td>
                             <p></p>
@@ -738,7 +735,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 4/14</p>
+                            <p>Thu 4/20</p>
                         </td>
                         <td>
                             <p></p>
@@ -775,7 +772,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>Tue 4/19</p>
+                            <p>Tue 4/25</p>
                         </td>
                         <td>
                             <p></p>
@@ -789,7 +786,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>Thu 4/21</p>
+                            <p>Thu 4/27</p>
                         </td>
                         <td>
                             <p></p>
