--- a/igm_mycourses_templates/x_SampleElements.html
+++ b/igm_mycourses_templates/x_SampleElements.html
@@ -21,8 +21,17 @@
         <p>This page was created from a template. Update with the correct content for your course and remove this header before sharing with students!</p>
     </div>
 
-    <h1>Elements Page</h1>
-    <p>This page includes samples of some commonly used page elements.</p>
+
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <p>Paragraph text</p>
+    Other text
+
+
+    <h1>Elements</h1>
+    <p>This includes samples of some commonly used page elements.</p>
     <p>You can copy one, or more, of the specific elements from this page and paste them into other pages. By
         combining elements, you can create new layouts for your courses.</p>
     <h2>Copying Elements</h2>
