Minor schedule cleanup

--- a/igm_mycourses_templates/schedule_sprints.html
+++ b/igm_mycourses_templates/schedule_sprints.html
@@ -40,7 +40,7 @@
         <p><strong><em>This is subject to change!</em></strong> Check myCourses frequently for updates!
         </p>
     </div>
-    
+
 
     <details>
         <summary>Course Kickoff (8/28-9/17)</summary>
@@ -1423,8 +1423,7 @@
         </div>
     </details>
 
-    <h3>Do NOT make travel plans for the finals period until ALL of your exam times have been set for ALL classes.</h3>
-    <details open>
+    <details>
         <summary>Finals Week</summary>
         <div class="content">
             <table style="width:100%">
@@ -1454,6 +1453,4 @@
         </div>
     </details>
 
-</body>
-
-</html>
+</body></html>
