--- a/igm_mycourses_templates/schedule_weeks.html
+++ b/igm_mycourses_templates/schedule_weeks.html
@@ -1525,7 +1525,7 @@
             </table>
         </div>
     </details>
-    <details open>
+    <details>
         <summary>Finals Week</summary>
         <div class="content">
             <table style="width:100%">
@@ -1555,6 +1555,4 @@
         </div>
     </details>
 
-</body>
-
-</html>
+</body></html>
