Fix semester code in schedule templates

--- a/igm_mycourses_templates/schedule_simple.html
+++ b/igm_mycourses_templates/schedule_simple.html
@@ -25,7 +25,7 @@
             <p>
                 This page was created from a template. Update with the correct
                 content for your course and remove this header before sharing
-                with students!<br />If you want to use Erika's template to help
+                with students!<br/>Switch the schedule template using "Select a Document Template" in the myCourses editor.<br />If you want to use Erika's template to help
                 plan/generate your schedule, you can make a copy of
                 <a
                     href="https://docs.google.com/spreadsheets/d/1leX7QuOjC0i5SAVraVZa2OBcLBSshKqmQgXoLbsIZ5I/edit?usp=sharing"
@@ -33,7 +33,7 @@
                 >. Be warned that it's pretty hacky!
             </p>
         </div>
-        <h2>Important Dates, Fall 2024 (2235)</h2>
+        <h2>Important Dates, Fall 2024 (2241)</h2>
         <ul>
             <li>8/26: Day, evening and online classes begin</li>
             <li>8/31: Saturday classes begin</li>
